<resources>
    <string name="app_name">客服</string>
    <string name="action_settings">设置</string>
    <string name="no_in_message">未接入</string>
    <string name="in_message">已接入</string>
    <string name="user_name">账号:</string>
    <string name="user_pw">密码:</string>
    <string name="user_login">登录</string>
    <string name="user_regist">注册</string>
    <string name="user_forget">忘记密码</string>
    <string name="title_activity_chat">客户</string>
    <string name="menu_chat_rename">编辑用户名</string>

</resources>
